[package]
name = "advent_of_code_2024"
version = "0.1.0"
edition = "2021"

[dependencies]
miette = { version = "7", features = ["fancy"] }
chumsky = "1.0.0-alpha.7"
itertools = "0.13.0"
divan = "0.1.16"
glam = "0.29.2"
indicatif = "0.17.9"
rayon = "1.10.0"
ilog = "1.0.1"
petgraph = "0.6.5"

[[bench]]
name = "aoc_all"
harness = false
